// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getAssetsDistribution 1 1`] = `
Array [
  Array [
    "ETH",
    "45576946679992284984",
    "1100615410442982129.195708479262007296",
    0.5251034370469378,
  ],
  Array [
    "ETC",
    "1.308866527562764971671e+21",
    "995381933382484927.8290468148470691773",
    0.47489656190003576,
  ],
  Array [
    "BTC",
    "1236074827",
    "1236074827",
    5.8973110311e-10,
  ],
  Array [
    "LTC",
    "70307690685",
    "378305672.30713502854533996",
    1.8048957601e-10,
  ],
  Array [
    "DASH",
    "17640374013",
    "163943205.730420990482863298",
    7.821727735e-11,
  ],
  Array [
    "BCH",
    "4865007875",
    "140763805.612469404053427375",
    6.715838924e-11,
  ],
  Array [
    "DOGE",
    "402496326530537",
    "113183468.42274728585309909875282",
    5.399981476e-11,
  ],
  Array [
    "BTG",
    "82512669712",
    "94067742.956264644444382736",
    4.487970518e-11,
  ],
  Array [
    "ZEC",
    "15113067065",
    "77975660.30157706409818163",
    3.720217511e-11,
  ],
  Array [
    "XRP",
    "79510766239",
    "1962721.868881384162142448692",
    9.3641429e-13,
  ],
  Array [
    "PPC",
    "26498924539",
    "735385.060879026691129708513",
    3.508521e-13,
  ],
  Array [
    "USDT",
    "407246085",
    "46155.31792558100925095655",
    2.202069e-14,
  ],
  Array [
    "USDC",
    "385234176",
    "43457.11785147469856477952",
    2.073338e-14,
  ],
  Array [
    "DAI",
    "322488015",
    "36491.2048677168902816496",
    1.740995e-14,
  ],
  Array [
    "NAS",
    "58162293",
    "1975.45035313065469060584",
    9.4249e-16,
  ],
  Array [
    "MATIC",
    "43091467",
    "77.5848000790256780254232",
    3.702e-17,
  ],
  Array [
    "ONE",
    "21465930",
    "6.153529424137567291116",
    2.94e-18,
  ],
]
`;

exports[`getBalanceHistory last item is now and have an amount equals to account balance 1`] = `
Array [
  Object {
    "date": 2018-02-14T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-15T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-16T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-17T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-18T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-19T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-20T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-21T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-22T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-23T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-24T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-25T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-26T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-27T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-28T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-01T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-02T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-03T03:59:59.999Z,
    "value": "53458956",
  },
  Object {
    "date": 2018-03-04T03:59:59.999Z,
    "value": "902729337",
  },
  Object {
    "date": 2018-03-05T03:59:59.999Z,
    "value": "308538509",
  },
  Object {
    "date": 2018-03-06T03:59:59.999Z,
    "value": "646660763",
  },
  Object {
    "date": 2018-03-07T03:59:59.999Z,
    "value": "388579456",
  },
  Object {
    "date": 2018-03-08T03:59:59.999Z,
    "value": "937674589",
  },
  Object {
    "date": 2018-03-09T03:59:59.999Z,
    "value": "1233859068",
  },
  Object {
    "date": 2018-03-10T03:59:59.999Z,
    "value": "1942741129",
  },
  Object {
    "date": 2018-03-11T03:59:59.999Z,
    "value": "2427827796",
  },
  Object {
    "date": 2018-03-12T03:59:59.999Z,
    "value": "3102614809",
  },
  Object {
    "date": 2018-03-13T03:59:59.999Z,
    "value": "3179359036",
  },
  Object {
    "date": 2018-03-14T03:59:59.999Z,
    "value": "3294518753",
  },
  Object {
    "date": 2018-03-14T17:34:42.000Z,
    "value": "3045720322",
  },
]
`;

exports[`getBalanceHistory(*,month) returns an array of 30 items 1`] = `
Array [
  Object {
    "date": 2018-02-14T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-15T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-16T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-17T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-18T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-19T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-20T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-21T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-22T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-23T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-24T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-25T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-26T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-27T03:59:59.999Z,
    "value": "1208647823",
  },
  Object {
    "date": 2018-02-28T03:59:59.999Z,
    "value": "1986309927",
  },
  Object {
    "date": 2018-03-01T03:59:59.999Z,
    "value": "3815053873",
  },
  Object {
    "date": 2018-03-02T03:59:59.999Z,
    "value": "4763919972",
  },
  Object {
    "date": 2018-03-03T03:59:59.999Z,
    "value": "4886575395",
  },
  Object {
    "date": 2018-03-04T03:59:59.999Z,
    "value": "4594971626",
  },
  Object {
    "date": 2018-03-05T03:59:59.999Z,
    "value": "5317248792",
  },
  Object {
    "date": 2018-03-06T03:59:59.999Z,
    "value": "5885916047",
  },
  Object {
    "date": 2018-03-07T03:59:59.999Z,
    "value": "7282320884",
  },
  Object {
    "date": 2018-03-08T03:59:59.999Z,
    "value": "7563531300",
  },
  Object {
    "date": 2018-03-09T03:59:59.999Z,
    "value": "8745597127",
  },
  Object {
    "date": 2018-03-10T03:59:59.999Z,
    "value": "7857165154",
  },
  Object {
    "date": 2018-03-11T03:59:59.999Z,
    "value": "7133135520",
  },
  Object {
    "date": 2018-03-12T03:59:59.999Z,
    "value": "7136692510",
  },
  Object {
    "date": 2018-03-13T03:59:59.999Z,
    "value": "7215033042",
  },
  Object {
    "date": 2018-03-14T03:59:59.999Z,
    "value": "7330747994",
  },
  Object {
    "date": 2018-03-14T17:34:42.000Z,
    "value": "7319504435",
  },
]
`;

exports[`getBalanceHistory(*,year) works as well 1`] = `
Array [
  Object {
    "date": 2017-03-26T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-04-02T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-04-09T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-04-16T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-04-23T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-04-30T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-05-07T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-05-14T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-05-21T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-05-28T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-06-04T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-06-11T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-06-18T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-06-25T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-07-02T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-07-09T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-07-16T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-07-23T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-07-30T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-08-06T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-08-13T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-08-20T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-08-27T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-09-03T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-09-10T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-09-17T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-09-24T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-10-01T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-10-08T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-10-15T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-10-22T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-10-29T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-11-05T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-11-12T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-11-19T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-11-26T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-12-03T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-12-10T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-12-17T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-12-24T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2017-12-31T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-01-07T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-01-14T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-01-21T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-01-28T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-04T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-11T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-18T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-02-25T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-04T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-11T03:59:59.999Z,
    "value": "4121631696",
  },
  Object {
    "date": 2018-03-14T17:34:42.000Z,
    "value": "6566099268",
  },
]
`;

exports[`getCurrencyPortfolio works with one account and is identically to that account history 1`] = `
Array [
  Object {
    "countervalue": "0",
    "date": 2018-03-07T18:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-07T19:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-07T20:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-07T21:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-07T22:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-07T23:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T00:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T01:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T02:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T04:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T05:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T06:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T07:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T08:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T09:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T10:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T11:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T12:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T13:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T14:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T15:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T16:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T17:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T18:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T19:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T20:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T21:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T22:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-08T23:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T00:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T01:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T02:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T04:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T05:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T06:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T07:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T08:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T09:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T10:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T11:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T12:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T13:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T14:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T15:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T16:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T17:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T18:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T19:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T20:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T21:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T22:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-09T23:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-10T00:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-10T01:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-10T02:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-10T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-10T04:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "0",
    "date": 2018-03-10T05:59:59.999Z,
    "value": "0",
  },
  Object {
    "countervalue": "3252704.1",
    "date": 2018-03-10T06:59:59.999Z,
    "value": "32527041",
  },
  Object {
    "countervalue": "5790629.6",
    "date": 2018-03-10T07:59:59.999Z,
    "value": "57906296",
  },
  Object {
    "countervalue": "5790629.6",
    "date": 2018-03-10T08:59:59.999Z,
    "value": "57906296",
  },
  Object {
    "countervalue": "5790629.6",
    "date": 2018-03-10T09:59:59.999Z,
    "value": "57906296",
  },
  Object {
    "countervalue": "5790629.6",
    "date": 2018-03-10T10:59:59.999Z,
    "value": "57906296",
  },
  Object {
    "countervalue": "5790629.6",
    "date": 2018-03-10T11:59:59.999Z,
    "value": "57906296",
  },
  Object {
    "countervalue": "5790629.6",
    "date": 2018-03-10T12:59:59.999Z,
    "value": "57906296",
  },
  Object {
    "countervalue": "5790629.6",
    "date": 2018-03-10T13:59:59.999Z,
    "value": "57906296",
  },
  Object {
    "countervalue": "5790629.6",
    "date": 2018-03-10T14:59:59.999Z,
    "value": "57906296",
  },
  Object {
    "countervalue": "5790629.6",
    "date": 2018-03-10T15:59:59.999Z,
    "value": "57906296",
  },
  Object {
    "countervalue": "5790629.6",
    "date": 2018-03-10T16:59:59.999Z,
    "value": "57906296",
  },
  Object {
    "countervalue": "5790629.6",
    "date": 2018-03-10T17:59:59.999Z,
    "value": "57906296",
  },
  Object {
    "countervalue": "5790629.6",
    "date": 2018-03-10T18:59:59.999Z,
    "value": "57906296",
  },
  Object {
    "countervalue": "13152703",
    "date": 2018-03-10T19:59:59.999Z,
    "value": "131527030",
  },
  Object {
    "countervalue": "13152703",
    "date": 2018-03-10T20:59:59.999Z,
    "value": "131527030",
  },
  Object {
    "countervalue": "18768889.7",
    "date": 2018-03-10T21:59:59.999Z,
    "value": "187688897",
  },
  Object {
    "countervalue": "18768889.7",
    "date": 2018-03-10T22:59:59.999Z,
    "value": "187688897",
  },
  Object {
    "countervalue": "18768889.7",
    "date": 2018-03-10T23:59:59.999Z,
    "value": "187688897",
  },
  Object {
    "countervalue": "19926821.2",
    "date": 2018-03-11T00:59:59.999Z,
    "value": "199268212",
  },
  Object {
    "countervalue": "19926821.2",
    "date": 2018-03-11T01:59:59.999Z,
    "value": "199268212",
  },
  Object {
    "countervalue": "20954042",
    "date": 2018-03-11T02:59:59.999Z,
    "value": "209540420",
  },
  Object {
    "countervalue": "20954042",
    "date": 2018-03-11T03:59:59.999Z,
    "value": "209540420",
  },
  Object {
    "countervalue": "42228787",
    "date": 2018-03-11T04:59:59.999Z,
    "value": "422287870",
  },
  Object {
    "countervalue": "44563600.7",
    "date": 2018-03-11T05:59:59.999Z,
    "value": "445636007",
  },
  Object {
    "countervalue": "44563600.7",
    "date": 2018-03-11T06:59:59.999Z,
    "value": "445636007",
  },
  Object {
    "countervalue": "44563600.7",
    "date": 2018-03-11T07:59:59.999Z,
    "value": "445636007",
  },
  Object {
    "countervalue": "45548061.1",
    "date": 2018-03-11T08:59:59.999Z,
    "value": "455480611",
  },
  Object {
    "countervalue": "45548061.1",
    "date": 2018-03-11T09:59:59.999Z,
    "value": "455480611",
  },
  Object {
    "countervalue": "25666915.6",
    "date": 2018-03-11T10:59:59.999Z,
    "value": "256669156",
  },
  Object {
    "countervalue": "25666915.6",
    "date": 2018-03-11T11:59:59.999Z,
    "value": "256669156",
  },
  Object {
    "countervalue": "25666915.6",
    "date": 2018-03-11T12:59:59.999Z,
    "value": "256669156",
  },
  Object {
    "countervalue": "25666915.6",
    "date": 2018-03-11T13:59:59.999Z,
    "value": "256669156",
  },
  Object {
    "countervalue": "25666915.6",
    "date": 2018-03-11T14:59:59.999Z,
    "value": "256669156",
  },
  Object {
    "countervalue": "25666915.6",
    "date": 2018-03-11T15:59:59.999Z,
    "value": "256669156",
  },
  Object {
    "countervalue": "25666915.6",
    "date": 2018-03-11T16:59:59.999Z,
    "value": "256669156",
  },
  Object {
    "countervalue": "25666915.6",
    "date": 2018-03-11T17:59:59.999Z,
    "value": "256669156",
  },
  Object {
    "countervalue": "27350605.4",
    "date": 2018-03-11T18:59:59.999Z,
    "value": "273506054",
  },
  Object {
    "countervalue": "27350605.4",
    "date": 2018-03-11T19:59:59.999Z,
    "value": "273506054",
  },
  Object {
    "countervalue": "27350605.4",
    "date": 2018-03-11T20:59:59.999Z,
    "value": "273506054",
  },
  Object {
    "countervalue": "27350605.4",
    "date": 2018-03-11T21:59:59.999Z,
    "value": "273506054",
  },
  Object {
    "countervalue": "27350605.4",
    "date": 2018-03-11T22:59:59.999Z,
    "value": "273506054",
  },
  Object {
    "countervalue": "27350605.4",
    "date": 2018-03-11T23:59:59.999Z,
    "value": "273506054",
  },
  Object {
    "countervalue": "22920047.3",
    "date": 2018-03-12T00:59:59.999Z,
    "value": "229200473",
  },
  Object {
    "countervalue": "22920047.3",
    "date": 2018-03-12T01:59:59.999Z,
    "value": "229200473",
  },
  Object {
    "countervalue": "22920047.3",
    "date": 2018-03-12T02:59:59.999Z,
    "value": "229200473",
  },
  Object {
    "countervalue": "22920047.3",
    "date": 2018-03-12T03:59:59.999Z,
    "value": "229200473",
  },
  Object {
    "countervalue": "22920047.3",
    "date": 2018-03-12T04:59:59.999Z,
    "value": "229200473",
  },
  Object {
    "countervalue": "22920047.3",
    "date": 2018-03-12T05:59:59.999Z,
    "value": "229200473",
  },
  Object {
    "countervalue": "22920047.3",
    "date": 2018-03-12T06:59:59.999Z,
    "value": "229200473",
  },
  Object {
    "countervalue": "22920047.3",
    "date": 2018-03-12T07:59:59.999Z,
    "value": "229200473",
  },
  Object {
    "countervalue": "22920047.3",
    "date": 2018-03-12T08:59:59.999Z,
    "value": "229200473",
  },
  Object {
    "countervalue": "23324813.1",
    "date": 2018-03-12T09:59:59.999Z,
    "value": "233248131",
  },
  Object {
    "countervalue": "24656215.7",
    "date": 2018-03-12T10:59:59.999Z,
    "value": "246562157",
  },
  Object {
    "countervalue": "24656215.7",
    "date": 2018-03-12T11:59:59.999Z,
    "value": "246562157",
  },
  Object {
    "countervalue": "24656215.7",
    "date": 2018-03-12T12:59:59.999Z,
    "value": "246562157",
  },
  Object {
    "countervalue": "24656215.7",
    "date": 2018-03-12T13:59:59.999Z,
    "value": "246562157",
  },
  Object {
    "countervalue": "24656215.7",
    "date": 2018-03-12T14:59:59.999Z,
    "value": "246562157",
  },
  Object {
    "countervalue": "24656215.7",
    "date": 2018-03-12T15:59:59.999Z,
    "value": "246562157",
  },
  Object {
    "countervalue": "24656215.7",
    "date": 2018-03-12T16:59:59.999Z,
    "value": "246562157",
  },
  Object {
    "countervalue": "24656215.7",
    "date": 2018-03-12T17:59:59.999Z,
    "value": "246562157",
  },
  Object {
    "countervalue": "24656215.7",
    "date": 2018-03-12T18:59:59.999Z,
    "value": "246562157",
  },
  Object {
    "countervalue": "24656215.7",
    "date": 2018-03-12T19:59:59.999Z,
    "value": "246562157",
  },
  Object {
    "countervalue": "24656215.7",
    "date": 2018-03-12T20:59:59.999Z,
    "value": "246562157",
  },
  Object {
    "countervalue": "24656215.7",
    "date": 2018-03-12T21:59:59.999Z,
    "value": "246562157",
  },
  Object {
    "countervalue": "24656215.7",
    "date": 2018-03-12T22:59:59.999Z,
    "value": "246562157",
  },
  Object {
    "countervalue": "24656215.7",
    "date": 2018-03-12T23:59:59.999Z,
    "value": "246562157",
  },
  Object {
    "countervalue": "24656215.7",
    "date": 2018-03-13T00:59:59.999Z,
    "value": "246562157",
  },
  Object {
    "countervalue": "24656215.7",
    "date": 2018-03-13T01:59:59.999Z,
    "value": "246562157",
  },
  Object {
    "countervalue": "25010932.4",
    "date": 2018-03-13T02:59:59.999Z,
    "value": "250109324",
  },
  Object {
    "countervalue": "9440810.3",
    "date": 2018-03-13T03:59:59.999Z,
    "value": "94408103",
  },
  Object {
    "countervalue": "9440810.3",
    "date": 2018-03-13T04:59:59.999Z,
    "value": "94408103",
  },
  Object {
    "countervalue": "9440810.3",
    "date": 2018-03-13T05:59:59.999Z,
    "value": "94408103",
  },
  Object {
    "countervalue": "9440810.3",
    "date": 2018-03-13T06:59:59.999Z,
    "value": "94408103",
  },
  Object {
    "countervalue": "9440810.3",
    "date": 2018-03-13T07:59:59.999Z,
    "value": "94408103",
  },
  Object {
    "countervalue": "9440810.3",
    "date": 2018-03-13T08:59:59.999Z,
    "value": "94408103",
  },
  Object {
    "countervalue": "9440810.3",
    "date": 2018-03-13T09:59:59.999Z,
    "value": "94408103",
  },
  Object {
    "countervalue": "9440810.3",
    "date": 2018-03-13T10:59:59.999Z,
    "value": "94408103",
  },
  Object {
    "countervalue": "9440810.3",
    "date": 2018-03-13T11:59:59.999Z,
    "value": "94408103",
  },
  Object {
    "countervalue": "9440810.3",
    "date": 2018-03-13T12:59:59.999Z,
    "value": "94408103",
  },
  Object {
    "countervalue": "9440810.3",
    "date": 2018-03-13T13:59:59.999Z,
    "value": "94408103",
  },
  Object {
    "countervalue": "9440810.3",
    "date": 2018-03-13T14:59:59.999Z,
    "value": "94408103",
  },
  Object {
    "countervalue": "9130311.7",
    "date": 2018-03-13T15:59:59.999Z,
    "value": "91303117",
  },
  Object {
    "countervalue": "9130311.7",
    "date": 2018-03-13T16:59:59.999Z,
    "value": "91303117",
  },
  Object {
    "countervalue": "17458380.9",
    "date": 2018-03-13T17:59:59.999Z,
    "value": "174583809",
  },
  Object {
    "countervalue": "21874361.6",
    "date": 2018-03-13T18:59:59.999Z,
    "value": "218743616",
  },
  Object {
    "countervalue": "21874361.6",
    "date": 2018-03-13T19:59:59.999Z,
    "value": "218743616",
  },
  Object {
    "countervalue": "21874361.6",
    "date": 2018-03-13T20:59:59.999Z,
    "value": "218743616",
  },
  Object {
    "countervalue": "21874361.6",
    "date": 2018-03-13T21:59:59.999Z,
    "value": "218743616",
  },
  Object {
    "countervalue": "21874361.6",
    "date": 2018-03-13T22:59:59.999Z,
    "value": "218743616",
  },
  Object {
    "countervalue": "21874361.6",
    "date": 2018-03-13T23:59:59.999Z,
    "value": "218743616",
  },
  Object {
    "countervalue": "21874361.6",
    "date": 2018-03-14T00:59:59.999Z,
    "value": "218743616",
  },
  Object {
    "countervalue": "21874361.6",
    "date": 2018-03-14T01:59:59.999Z,
    "value": "218743616",
  },
  Object {
    "countervalue": "21874361.6",
    "date": 2018-03-14T02:59:59.999Z,
    "value": "218743616",
  },
  Object {
    "countervalue": "24196541.6",
    "date": 2018-03-14T03:59:59.999Z,
    "value": "241965416",
  },
  Object {
    "countervalue": "24196541.6",
    "date": 2018-03-14T04:59:59.999Z,
    "value": "241965416",
  },
  Object {
    "countervalue": "24196541.6",
    "date": 2018-03-14T05:59:59.999Z,
    "value": "241965416",
  },
  Object {
    "countervalue": "24196541.6",
    "date": 2018-03-14T06:59:59.999Z,
    "value": "241965416",
  },
  Object {
    "countervalue": "26753417.7",
    "date": 2018-03-14T07:59:59.999Z,
    "value": "267534177",
  },
  Object {
    "countervalue": "26753417.7",
    "date": 2018-03-14T08:59:59.999Z,
    "value": "267534177",
  },
  Object {
    "countervalue": "31363763.7",
    "date": 2018-03-14T09:59:59.999Z,
    "value": "313637637",
  },
  Object {
    "countervalue": "31098455",
    "date": 2018-03-14T10:59:59.999Z,
    "value": "310984550",
  },
  Object {
    "countervalue": "31098455",
    "date": 2018-03-14T11:59:59.999Z,
    "value": "310984550",
  },
  Object {
    "countervalue": "31098455",
    "date": 2018-03-14T12:59:59.999Z,
    "value": "310984550",
  },
  Object {
    "countervalue": "31098455",
    "date": 2018-03-14T13:59:59.999Z,
    "value": "310984550",
  },
  Object {
    "countervalue": "31098455",
    "date": 2018-03-14T14:59:59.999Z,
    "value": "310984550",
  },
  Object {
    "countervalue": "31098455",
    "date": 2018-03-14T15:59:59.999Z,
    "value": "310984550",
  },
  Object {
    "countervalue": "31098455",
    "date": 2018-03-14T16:59:59.999Z,
    "value": "310984550",
  },
  Object {
    "countervalue": "31098455",
    "date": 2018-03-14T17:34:42.000Z,
    "value": "310984550",
  },
]
`;

exports[`getPortfolio with lot of accounts 1`] = `
Array [
  Object {
    "date": 2018-03-07T18:59:59.999Z,
    "value": "681777069380981498801.9998986020078650465",
  },
  Object {
    "date": 2018-03-07T19:59:59.999Z,
    "value": "682475332962823999118.9998986020078650465",
  },
  Object {
    "date": 2018-03-07T20:59:59.999Z,
    "value": "682435429377301207737.9998986020078650465",
  },
  Object {
    "date": 2018-03-07T21:59:59.999Z,
    "value": "682866202750978861196.9998986020078650465",
  },
  Object {
    "date": 2018-03-07T22:59:59.999Z,
    "value": "683079570187581323159.9998986020078650465",
  },
  Object {
    "date": 2018-03-07T23:59:59.999Z,
    "value": "691550011297640752643.9998986020078650465",
  },
  Object {
    "date": 2018-03-08T00:59:59.999Z,
    "value": "692229565241238565899.9998986020078650465",
  },
  Object {
    "date": 2018-03-08T01:59:59.999Z,
    "value": "691973520496220513241.0948190044529783585",
  },
  Object {
    "date": 2018-03-08T02:59:59.999Z,
    "value": "691973520496759770221.0948190044529783585",
  },
  Object {
    "date": 2018-03-08T03:59:59.999Z,
    "value": "691973520514467057443.8703797514877238225",
  },
  Object {
    "date": 2018-03-08T04:59:59.999Z,
    "value": "692022562297747916904.8703797514877238225",
  },
  Object {
    "date": 2018-03-08T05:59:59.999Z,
    "value": "681414121207314719331.8703797514877238225",
  },
  Object {
    "date": 2018-03-08T06:59:59.999Z,
    "value": "694617325086908596767.6058008627595384545",
  },
  Object {
    "date": 2018-03-08T07:59:59.999Z,
    "value": "693878647479969956920.6058008627595384545",
  },
  Object {
    "date": 2018-03-08T08:59:59.999Z,
    "value": "694486138435905500938.6058008627595384545",
  },
  Object {
    "date": 2018-03-08T09:59:59.999Z,
    "value": "694486137796855366364.6058008627595384545",
  },
  Object {
    "date": 2018-03-08T10:59:59.999Z,
    "value": "694587100113817251668.6058008627595384545",
  },
  Object {
    "date": 2018-03-08T11:59:59.999Z,
    "value": "690895495166044993640.6058008627595384545",
  },
  Object {
    "date": 2018-03-08T12:59:59.999Z,
    "value": "691076267701540032406.77964392593587852",
  },
  Object {
    "date": 2018-03-08T13:59:59.999Z,
    "value": "691615265727794619659.77964392593587852",
  },
  Object {
    "date": 2018-03-08T14:59:59.999Z,
    "value": "683634250299980982130.77964392593587852",
  },
  Object {
    "date": 2018-03-08T15:59:59.999Z,
    "value": "683634245185386628206.77964392593587852",
  },
  Object {
    "date": 2018-03-08T16:59:59.999Z,
    "value": "706691033407900278469.77964392593587852",
  },
  Object {
    "date": 2018-03-08T17:59:59.999Z,
    "value": "706518800198204548273",
  },
  Object {
    "date": 2018-03-08T18:59:59.999Z,
    "value": "706537350861619014593",
  },
  Object {
    "date": 2018-03-08T19:59:59.999Z,
    "value": "718561312631714198477",
  },
  Object {
    "date": 2018-03-08T20:59:59.999Z,
    "value": "731536731782517022397",
  },
  Object {
    "date": 2018-03-08T21:59:59.999Z,
    "value": "740266809891780489928",
  },
  Object {
    "date": 2018-03-08T22:59:59.999Z,
    "value": "741048351059579309488",
  },
  Object {
    "date": 2018-03-08T23:59:59.999Z,
    "value": "749784715430304760646",
  },
  Object {
    "date": 2018-03-09T00:59:59.999Z,
    "value": "749512101870292745401",
  },
  Object {
    "date": 2018-03-09T01:59:59.999Z,
    "value": "749512101871530817702",
  },
  Object {
    "date": 2018-03-09T02:59:59.999Z,
    "value": "742005882169935750173",
  },
  Object {
    "date": 2018-03-09T03:59:59.999Z,
    "value": "742463458634053629995",
  },
  Object {
    "date": 2018-03-09T04:59:59.999Z,
    "value": "742463458634007034653",
  },
  Object {
    "date": 2018-03-09T05:59:59.999Z,
    "value": "742644643661664756242",
  },
  Object {
    "date": 2018-03-09T06:59:59.999Z,
    "value": "752676951663875810234",
  },
  Object {
    "date": 2018-03-09T07:59:59.999Z,
    "value": "764682698709800175223",
  },
  Object {
    "date": 2018-03-09T08:59:59.999Z,
    "value": "764310939817629941854",
  },
  Object {
    "date": 2018-03-09T09:59:59.999Z,
    "value": "761216102323062884341",
  },
  Object {
    "date": 2018-03-09T10:59:59.999Z,
    "value": "761606492018134731410",
  },
  Object {
    "date": 2018-03-09T11:59:59.999Z,
    "value": "781856982870178577686",
  },
  Object {
    "date": 2018-03-09T12:59:59.999Z,
    "value": "782708582571434576885",
  },
  Object {
    "date": 2018-03-09T13:59:59.999Z,
    "value": "798294878388570612789",
  },
  Object {
    "date": 2018-03-09T14:59:59.999Z,
    "value": "817567275239061913194",
  },
  Object {
    "date": 2018-03-09T15:59:59.999Z,
    "value": "817076471670305675521",
  },
  Object {
    "date": 2018-03-09T16:59:59.999Z,
    "value": "816867557533530248425",
  },
  Object {
    "date": 2018-03-09T17:59:59.999Z,
    "value": "816867557434314326244",
  },
  Object {
    "date": 2018-03-09T18:59:59.999Z,
    "value": "816781747464995315363",
  },
  Object {
    "date": 2018-03-09T19:59:59.999Z,
    "value": "832312380957585570200",
  },
  Object {
    "date": 2018-03-09T20:59:59.999Z,
    "value": "832334157826031984265",
  },
  Object {
    "date": 2018-03-09T21:59:59.999Z,
    "value": "819826247202351951782",
  },
  Object {
    "date": 2018-03-09T22:59:59.999Z,
    "value": "820272923058399368342",
  },
  Object {
    "date": 2018-03-09T23:59:59.999Z,
    "value": "803775726761021178634",
  },
  Object {
    "date": 2018-03-10T00:59:59.999Z,
    "value": "805103046885845009427",
  },
  Object {
    "date": 2018-03-10T01:59:59.999Z,
    "value": "812928314438549465023.646275960140926245",
  },
  Object {
    "date": 2018-03-10T02:59:59.999Z,
    "value": "813349754657763781425.646275960140926245",
  },
  Object {
    "date": 2018-03-10T03:59:59.999Z,
    "value": "814381390957129433489.646275960140926245",
  },
  Object {
    "date": 2018-03-10T04:59:59.999Z,
    "value": "814381390956500460663.646275960140926245",
  },
  Object {
    "date": 2018-03-10T05:59:59.999Z,
    "value": "814370888266197245954.646275960140926245",
  },
  Object {
    "date": 2018-03-10T06:59:59.999Z,
    "value": "814753982264343467329.009868491429339312",
  },
  Object {
    "date": 2018-03-10T07:59:59.999Z,
    "value": "815107531964156585370.009868491429339312",
  },
  Object {
    "date": 2018-03-10T08:59:59.999Z,
    "value": "836627757142745843042.009868491429339312",
  },
  Object {
    "date": 2018-03-10T09:59:59.999Z,
    "value": "836627757142796875330.009868491429339312",
  },
  Object {
    "date": 2018-03-10T10:59:59.999Z,
    "value": "836726086181796868264",
  },
  Object {
    "date": 2018-03-10T11:59:59.999Z,
    "value": "837797273039175160095",
  },
  Object {
    "date": 2018-03-10T12:59:59.999Z,
    "value": "837797279772363720546",
  },
  Object {
    "date": 2018-03-10T13:59:59.999Z,
    "value": "837797281621852344109",
  },
  Object {
    "date": 2018-03-10T14:59:59.999Z,
    "value": "837623925846388523193",
  },
  Object {
    "date": 2018-03-10T15:59:59.999Z,
    "value": "837623925846495723672",
  },
  Object {
    "date": 2018-03-10T16:59:59.999Z,
    "value": "848917128078150704619",
  },
  Object {
    "date": 2018-03-10T17:59:59.999Z,
    "value": "854297089192805870676",
  },
  Object {
    "date": 2018-03-10T18:59:59.999Z,
    "value": "867105600875848849226",
  },
  Object {
    "date": 2018-03-10T19:59:59.999Z,
    "value": "867105600875776613476",
  },
  Object {
    "date": 2018-03-10T20:59:59.999Z,
    "value": "871068822525243724655",
  },
  Object {
    "date": 2018-03-10T21:59:59.999Z,
    "value": "872890424203866733360",
  },
  Object {
    "date": 2018-03-10T22:59:59.999Z,
    "value": "902192845633406482457",
  },
  Object {
    "date": 2018-03-10T23:59:59.999Z,
    "value": "902227685194313680511",
  },
  Object {
    "date": 2018-03-11T00:59:59.999Z,
    "value": "901559317759316541639",
  },
  Object {
    "date": 2018-03-11T01:59:59.999Z,
    "value": "886387199447087919891",
  },
  Object {
    "date": 2018-03-11T02:59:59.999Z,
    "value": "928628567152900471886",
  },
  Object {
    "date": 2018-03-11T03:59:59.999Z,
    "value": "928628569352867692830",
  },
  Object {
    "date": 2018-03-11T04:59:59.999Z,
    "value": "928746809339637371950",
  },
  Object {
    "date": 2018-03-11T05:59:59.999Z,
    "value": "928746809342025339976",
  },
  Object {
    "date": 2018-03-11T06:59:59.999Z,
    "value": "928759398545180614065",
  },
  Object {
    "date": 2018-03-11T07:59:59.999Z,
    "value": "929139774820832490739",
  },
  Object {
    "date": 2018-03-11T08:59:59.999Z,
    "value": "925094720956760702750",
  },
  Object {
    "date": 2018-03-11T09:59:59.999Z,
    "value": "943949135471460592294",
  },
  Object {
    "date": 2018-03-11T10:59:59.999Z,
    "value": "968783220414873200754",
  },
  Object {
    "date": 2018-03-11T11:59:59.999Z,
    "value": "968797646305264344572",
  },
  Object {
    "date": 2018-03-11T12:59:59.999Z,
    "value": "968533526220898948488",
  },
  Object {
    "date": 2018-03-11T13:59:59.999Z,
    "value": "968533526220679049937",
  },
  Object {
    "date": 2018-03-11T14:59:59.999Z,
    "value": "968533526221532897791",
  },
  Object {
    "date": 2018-03-11T15:59:59.999Z,
    "value": "948682277975739585311",
  },
  Object {
    "date": 2018-03-11T16:59:59.999Z,
    "value": "962463660489545261821",
  },
  Object {
    "date": 2018-03-11T17:59:59.999Z,
    "value": "934968876887588230344",
  },
  Object {
    "date": 2018-03-11T18:59:59.999Z,
    "value": "934968876888590017887",
  },
  Object {
    "date": 2018-03-11T19:59:59.999Z,
    "value": "934968877080339096930",
  },
  Object {
    "date": 2018-03-11T20:59:59.999Z,
    "value": "967155771626311374648",
  },
  Object {
    "date": 2018-03-11T21:59:59.999Z,
    "value": "974564395659280026807",
  },
  Object {
    "date": 2018-03-11T22:59:59.999Z,
    "value": "974682710447526714394",
  },
  Object {
    "date": 2018-03-11T23:59:59.999Z,
    "value": "974682704360888067450",
  },
  Object {
    "date": 2018-03-12T00:59:59.999Z,
    "value": "960921491734811828221",
  },
  Object {
    "date": 2018-03-12T01:59:59.999Z,
    "value": "959738884210081429552",
  },
  Object {
    "date": 2018-03-12T02:59:59.999Z,
    "value": "959843299940932883140",
  },
  Object {
    "date": 2018-03-12T03:59:59.999Z,
    "value": "960511986172112012759",
  },
  Object {
    "date": 2018-03-12T04:59:59.999Z,
    "value": "960473587351630527589",
  },
  Object {
    "date": 2018-03-12T05:59:59.999Z,
    "value": "960193417834188715795",
  },
  Object {
    "date": 2018-03-12T06:59:59.999Z,
    "value": "965165485676112126511",
  },
  Object {
    "date": 2018-03-12T07:59:59.999Z,
    "value": "962755534681291607262",
  },
  Object {
    "date": 2018-03-12T08:59:59.999Z,
    "value": "976210678696050110701",
  },
  Object {
    "date": 2018-03-12T09:59:59.999Z,
    "value": "978139069425552055740",
  },
  Object {
    "date": 2018-03-12T10:59:59.999Z,
    "value": "955812893213131123815",
  },
  Object {
    "date": 2018-03-12T11:59:59.999Z,
    "value": "958665500923030894047",
  },
  Object {
    "date": 2018-03-12T12:59:59.999Z,
    "value": "958657636757411319884.359365801424571556",
  },
  Object {
    "date": 2018-03-12T13:59:59.999Z,
    "value": "1.025024336505053989219359365801424571556e+21",
  },
  Object {
    "date": 2018-03-12T14:59:59.999Z,
    "value": "1.010845471203864184281359365801424571556e+21",
  },
  Object {
    "date": 2018-03-12T15:59:59.999Z,
    "value": "1.008416273468909575599e+21",
  },
  Object {
    "date": 2018-03-12T16:59:59.999Z,
    "value": "1.034203639885220894853e+21",
  },
  Object {
    "date": 2018-03-12T17:59:59.999Z,
    "value": "1.039064049170270802217e+21",
  },
  Object {
    "date": 2018-03-12T18:59:59.999Z,
    "value": "1.038972097872213866138e+21",
  },
  Object {
    "date": 2018-03-12T19:59:59.999Z,
    "value": "1.040135900953571205639e+21",
  },
  Object {
    "date": 2018-03-12T20:59:59.999Z,
    "value": "1.044512291011424026431e+21",
  },
  Object {
    "date": 2018-03-12T21:59:59.999Z,
    "value": "1.044512289442778785678e+21",
  },
  Object {
    "date": 2018-03-12T22:59:59.999Z,
    "value": "1.096504879400474502438e+21",
  },
  Object {
    "date": 2018-03-12T23:59:59.999Z,
    "value": "1.083073661817552812462e+21",
  },
  Object {
    "date": 2018-03-13T00:59:59.999Z,
    "value": "1.085122602485135752452e+21",
  },
  Object {
    "date": 2018-03-13T01:59:59.999Z,
    "value": "1.110658068452076200858e+21",
  },
  Object {
    "date": 2018-03-13T02:59:59.999Z,
    "value": "1.123971515154776765394e+21",
  },
  Object {
    "date": 2018-03-13T03:59:59.999Z,
    "value": "1.151996189025382524126e+21",
  },
  Object {
    "date": 2018-03-13T04:59:59.999Z,
    "value": "1.203571693351376315704e+21",
  },
  Object {
    "date": 2018-03-13T05:59:59.999Z,
    "value": "1.203408805199569389431e+21",
  },
  Object {
    "date": 2018-03-13T06:59:59.999Z,
    "value": "1.20340880519985022392e+21",
  },
  Object {
    "date": 2018-03-13T07:59:59.999Z,
    "value": "1.20337922315012875298e+21",
  },
  Object {
    "date": 2018-03-13T08:59:59.999Z,
    "value": "1.203357888008126561403e+21",
  },
  Object {
    "date": 2018-03-13T09:59:59.999Z,
    "value": "1.203242763556824075147e+21",
  },
  Object {
    "date": 2018-03-13T10:59:59.999Z,
    "value": "1.203492413661489184052e+21",
  },
  Object {
    "date": 2018-03-13T11:59:59.999Z,
    "value": "1.203492416444201181439e+21",
  },
  Object {
    "date": 2018-03-13T12:59:59.999Z,
    "value": "1.203603072980639083145e+21",
  },
  Object {
    "date": 2018-03-13T13:59:59.999Z,
    "value": "1.203662038844348218423e+21",
  },
  Object {
    "date": 2018-03-13T14:59:59.999Z,
    "value": "1.168365993172359862349e+21",
  },
  Object {
    "date": 2018-03-13T15:59:59.999Z,
    "value": "1.189873134436697580771e+21",
  },
  Object {
    "date": 2018-03-13T16:59:59.999Z,
    "value": "1.208777560260750791789e+21",
  },
  Object {
    "date": 2018-03-13T17:59:59.999Z,
    "value": "1.193781075998728266668e+21",
  },
  Object {
    "date": 2018-03-13T18:59:59.999Z,
    "value": "1.198372679236250688402e+21",
  },
  Object {
    "date": 2018-03-13T19:59:59.999Z,
    "value": "1.19892727008745896711e+21",
  },
  Object {
    "date": 2018-03-13T20:59:59.999Z,
    "value": "1.19921680421799359124e+21",
  },
  Object {
    "date": 2018-03-13T21:59:59.999Z,
    "value": "1.199772711466497192312e+21",
  },
  Object {
    "date": 2018-03-13T22:59:59.999Z,
    "value": "1.2226222201008560082e+21",
  },
  Object {
    "date": 2018-03-13T23:59:59.999Z,
    "value": "1.230440970678894956149e+21",
  },
  Object {
    "date": 2018-03-14T00:59:59.999Z,
    "value": "1.225427847423436462419e+21",
  },
  Object {
    "date": 2018-03-14T01:59:59.999Z,
    "value": "1.225491810392634061247e+21",
  },
  Object {
    "date": 2018-03-14T02:59:59.999Z,
    "value": "1.232696611681583162569e+21",
  },
  Object {
    "date": 2018-03-14T03:59:59.999Z,
    "value": "1.267041123687357359905e+21",
  },
  Object {
    "date": 2018-03-14T04:59:59.999Z,
    "value": "1.267357416173043884156e+21",
  },
  Object {
    "date": 2018-03-14T05:59:59.999Z,
    "value": "1.270158751765943906606e+21",
  },
  Object {
    "date": 2018-03-14T06:59:59.999Z,
    "value": "1.293263507478505383318e+21",
  },
  Object {
    "date": 2018-03-14T07:59:59.999Z,
    "value": "1.294813741303047113411e+21",
  },
  Object {
    "date": 2018-03-14T08:59:59.999Z,
    "value": "1.294510592273916245563e+21",
  },
  Object {
    "date": 2018-03-14T09:59:59.999Z,
    "value": "1.296382444297284879811e+21",
  },
  Object {
    "date": 2018-03-14T10:59:59.999Z,
    "value": "1.299714531552697094016e+21",
  },
  Object {
    "date": 2018-03-14T11:59:59.999Z,
    "value": "1.300337081329453407867e+21",
  },
  Object {
    "date": 2018-03-14T12:59:59.999Z,
    "value": "1.303442207485053525895e+21",
  },
  Object {
    "date": 2018-03-14T13:59:59.999Z,
    "value": "1.303007792715458830146e+21",
  },
  Object {
    "date": 2018-03-14T14:59:59.999Z,
    "value": "1.297670920218015946853e+21",
  },
  Object {
    "date": 2018-03-14T15:59:59.999Z,
    "value": "1.306292772136653278275e+21",
  },
  Object {
    "date": 2018-03-14T16:59:59.999Z,
    "value": "1.354146750810344904523e+21",
  },
  Object {
    "date": 2018-03-14T17:34:42.000Z,
    "value": "1.354443877038006050113e+21",
  },
]
`;

exports[`getPortfolio works with one account and is identically to that account history 1`] = `
Array [
  Object {
    "date": 2018-03-07T18:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-07T19:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-07T20:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-07T21:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-07T22:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-07T23:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T00:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T01:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T02:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T04:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T05:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T06:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T07:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T08:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T09:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T10:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T11:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T12:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T13:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T14:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T15:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T16:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T17:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T18:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T19:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T20:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T21:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T22:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-08T23:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T00:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T01:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T02:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T04:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T05:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T06:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T07:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T08:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T09:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T10:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T11:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T12:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T13:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T14:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T15:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T16:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T17:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T18:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T19:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T20:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T21:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T22:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-09T23:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-10T00:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-10T01:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-10T02:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-10T03:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-10T04:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-10T05:59:59.999Z,
    "value": "0",
  },
  Object {
    "date": 2018-03-10T06:59:59.999Z,
    "value": "32527041",
  },
  Object {
    "date": 2018-03-10T07:59:59.999Z,
    "value": "57906296",
  },
  Object {
    "date": 2018-03-10T08:59:59.999Z,
    "value": "57906296",
  },
  Object {
    "date": 2018-03-10T09:59:59.999Z,
    "value": "57906296",
  },
  Object {
    "date": 2018-03-10T10:59:59.999Z,
    "value": "57906296",
  },
  Object {
    "date": 2018-03-10T11:59:59.999Z,
    "value": "57906296",
  },
  Object {
    "date": 2018-03-10T12:59:59.999Z,
    "value": "57906296",
  },
  Object {
    "date": 2018-03-10T13:59:59.999Z,
    "value": "57906296",
  },
  Object {
    "date": 2018-03-10T14:59:59.999Z,
    "value": "57906296",
  },
  Object {
    "date": 2018-03-10T15:59:59.999Z,
    "value": "57906296",
  },
  Object {
    "date": 2018-03-10T16:59:59.999Z,
    "value": "57906296",
  },
  Object {
    "date": 2018-03-10T17:59:59.999Z,
    "value": "57906296",
  },
  Object {
    "date": 2018-03-10T18:59:59.999Z,
    "value": "57906296",
  },
  Object {
    "date": 2018-03-10T19:59:59.999Z,
    "value": "131527030",
  },
  Object {
    "date": 2018-03-10T20:59:59.999Z,
    "value": "131527030",
  },
  Object {
    "date": 2018-03-10T21:59:59.999Z,
    "value": "187688897",
  },
  Object {
    "date": 2018-03-10T22:59:59.999Z,
    "value": "187688897",
  },
  Object {
    "date": 2018-03-10T23:59:59.999Z,
    "value": "187688897",
  },
  Object {
    "date": 2018-03-11T00:59:59.999Z,
    "value": "199268212",
  },
  Object {
    "date": 2018-03-11T01:59:59.999Z,
    "value": "199268212",
  },
  Object {
    "date": 2018-03-11T02:59:59.999Z,
    "value": "209540420",
  },
  Object {
    "date": 2018-03-11T03:59:59.999Z,
    "value": "209540420",
  },
  Object {
    "date": 2018-03-11T04:59:59.999Z,
    "value": "422287870",
  },
  Object {
    "date": 2018-03-11T05:59:59.999Z,
    "value": "445636007",
  },
  Object {
    "date": 2018-03-11T06:59:59.999Z,
    "value": "445636007",
  },
  Object {
    "date": 2018-03-11T07:59:59.999Z,
    "value": "445636007",
  },
  Object {
    "date": 2018-03-11T08:59:59.999Z,
    "value": "455480611",
  },
  Object {
    "date": 2018-03-11T09:59:59.999Z,
    "value": "455480611",
  },
  Object {
    "date": 2018-03-11T10:59:59.999Z,
    "value": "256669156",
  },
  Object {
    "date": 2018-03-11T11:59:59.999Z,
    "value": "256669156",
  },
  Object {
    "date": 2018-03-11T12:59:59.999Z,
    "value": "256669156",
  },
  Object {
    "date": 2018-03-11T13:59:59.999Z,
    "value": "256669156",
  },
  Object {
    "date": 2018-03-11T14:59:59.999Z,
    "value": "256669156",
  },
  Object {
    "date": 2018-03-11T15:59:59.999Z,
    "value": "256669156",
  },
  Object {
    "date": 2018-03-11T16:59:59.999Z,
    "value": "256669156",
  },
  Object {
    "date": 2018-03-11T17:59:59.999Z,
    "value": "256669156",
  },
  Object {
    "date": 2018-03-11T18:59:59.999Z,
    "value": "273506054",
  },
  Object {
    "date": 2018-03-11T19:59:59.999Z,
    "value": "273506054",
  },
  Object {
    "date": 2018-03-11T20:59:59.999Z,
    "value": "273506054",
  },
  Object {
    "date": 2018-03-11T21:59:59.999Z,
    "value": "273506054",
  },
  Object {
    "date": 2018-03-11T22:59:59.999Z,
    "value": "273506054",
  },
  Object {
    "date": 2018-03-11T23:59:59.999Z,
    "value": "273506054",
  },
  Object {
    "date": 2018-03-12T00:59:59.999Z,
    "value": "229200473",
  },
  Object {
    "date": 2018-03-12T01:59:59.999Z,
    "value": "229200473",
  },
  Object {
    "date": 2018-03-12T02:59:59.999Z,
    "value": "229200473",
  },
  Object {
    "date": 2018-03-12T03:59:59.999Z,
    "value": "229200473",
  },
  Object {
    "date": 2018-03-12T04:59:59.999Z,
    "value": "229200473",
  },
  Object {
    "date": 2018-03-12T05:59:59.999Z,
    "value": "229200473",
  },
  Object {
    "date": 2018-03-12T06:59:59.999Z,
    "value": "229200473",
  },
  Object {
    "date": 2018-03-12T07:59:59.999Z,
    "value": "229200473",
  },
  Object {
    "date": 2018-03-12T08:59:59.999Z,
    "value": "229200473",
  },
  Object {
    "date": 2018-03-12T09:59:59.999Z,
    "value": "233248131",
  },
  Object {
    "date": 2018-03-12T10:59:59.999Z,
    "value": "246562157",
  },
  Object {
    "date": 2018-03-12T11:59:59.999Z,
    "value": "246562157",
  },
  Object {
    "date": 2018-03-12T12:59:59.999Z,
    "value": "246562157",
  },
  Object {
    "date": 2018-03-12T13:59:59.999Z,
    "value": "246562157",
  },
  Object {
    "date": 2018-03-12T14:59:59.999Z,
    "value": "246562157",
  },
  Object {
    "date": 2018-03-12T15:59:59.999Z,
    "value": "246562157",
  },
  Object {
    "date": 2018-03-12T16:59:59.999Z,
    "value": "246562157",
  },
  Object {
    "date": 2018-03-12T17:59:59.999Z,
    "value": "246562157",
  },
  Object {
    "date": 2018-03-12T18:59:59.999Z,
    "value": "246562157",
  },
  Object {
    "date": 2018-03-12T19:59:59.999Z,
    "value": "246562157",
  },
  Object {
    "date": 2018-03-12T20:59:59.999Z,
    "value": "246562157",
  },
  Object {
    "date": 2018-03-12T21:59:59.999Z,
    "value": "246562157",
  },
  Object {
    "date": 2018-03-12T22:59:59.999Z,
    "value": "246562157",
  },
  Object {
    "date": 2018-03-12T23:59:59.999Z,
    "value": "246562157",
  },
  Object {
    "date": 2018-03-13T00:59:59.999Z,
    "value": "246562157",
  },
  Object {
    "date": 2018-03-13T01:59:59.999Z,
    "value": "246562157",
  },
  Object {
    "date": 2018-03-13T02:59:59.999Z,
    "value": "250109324",
  },
  Object {
    "date": 2018-03-13T03:59:59.999Z,
    "value": "94408103",
  },
  Object {
    "date": 2018-03-13T04:59:59.999Z,
    "value": "94408103",
  },
  Object {
    "date": 2018-03-13T05:59:59.999Z,
    "value": "94408103",
  },
  Object {
    "date": 2018-03-13T06:59:59.999Z,
    "value": "94408103",
  },
  Object {
    "date": 2018-03-13T07:59:59.999Z,
    "value": "94408103",
  },
  Object {
    "date": 2018-03-13T08:59:59.999Z,
    "value": "94408103",
  },
  Object {
    "date": 2018-03-13T09:59:59.999Z,
    "value": "94408103",
  },
  Object {
    "date": 2018-03-13T10:59:59.999Z,
    "value": "94408103",
  },
  Object {
    "date": 2018-03-13T11:59:59.999Z,
    "value": "94408103",
  },
  Object {
    "date": 2018-03-13T12:59:59.999Z,
    "value": "94408103",
  },
  Object {
    "date": 2018-03-13T13:59:59.999Z,
    "value": "94408103",
  },
  Object {
    "date": 2018-03-13T14:59:59.999Z,
    "value": "94408103",
  },
  Object {
    "date": 2018-03-13T15:59:59.999Z,
    "value": "91303117",
  },
  Object {
    "date": 2018-03-13T16:59:59.999Z,
    "value": "91303117",
  },
  Object {
    "date": 2018-03-13T17:59:59.999Z,
    "value": "174583809",
  },
  Object {
    "date": 2018-03-13T18:59:59.999Z,
    "value": "218743616",
  },
  Object {
    "date": 2018-03-13T19:59:59.999Z,
    "value": "218743616",
  },
  Object {
    "date": 2018-03-13T20:59:59.999Z,
    "value": "218743616",
  },
  Object {
    "date": 2018-03-13T21:59:59.999Z,
    "value": "218743616",
  },
  Object {
    "date": 2018-03-13T22:59:59.999Z,
    "value": "218743616",
  },
  Object {
    "date": 2018-03-13T23:59:59.999Z,
    "value": "218743616",
  },
  Object {
    "date": 2018-03-14T00:59:59.999Z,
    "value": "218743616",
  },
  Object {
    "date": 2018-03-14T01:59:59.999Z,
    "value": "218743616",
  },
  Object {
    "date": 2018-03-14T02:59:59.999Z,
    "value": "218743616",
  },
  Object {
    "date": 2018-03-14T03:59:59.999Z,
    "value": "241965416",
  },
  Object {
    "date": 2018-03-14T04:59:59.999Z,
    "value": "241965416",
  },
  Object {
    "date": 2018-03-14T05:59:59.999Z,
    "value": "241965416",
  },
  Object {
    "date": 2018-03-14T06:59:59.999Z,
    "value": "241965416",
  },
  Object {
    "date": 2018-03-14T07:59:59.999Z,
    "value": "267534177",
  },
  Object {
    "date": 2018-03-14T08:59:59.999Z,
    "value": "267534177",
  },
  Object {
    "date": 2018-03-14T09:59:59.999Z,
    "value": "313637637",
  },
  Object {
    "date": 2018-03-14T10:59:59.999Z,
    "value": "310984550",
  },
  Object {
    "date": 2018-03-14T11:59:59.999Z,
    "value": "310984550",
  },
  Object {
    "date": 2018-03-14T12:59:59.999Z,
    "value": "310984550",
  },
  Object {
    "date": 2018-03-14T13:59:59.999Z,
    "value": "310984550",
  },
  Object {
    "date": 2018-03-14T14:59:59.999Z,
    "value": "310984550",
  },
  Object {
    "date": 2018-03-14T15:59:59.999Z,
    "value": "310984550",
  },
  Object {
    "date": 2018-03-14T16:59:59.999Z,
    "value": "310984550",
  },
  Object {
    "date": 2018-03-14T17:34:42.000Z,
    "value": "310984550",
  },
]
`;
